[project]
name = "oversight"
authors = [
    {name = "Florian Apolloner", email = "florian@apolloner.eu"},
]
dependencies = [
    "Django>=5.1.0",
]
requires-python = "~=3.13.0"
license = {text = "MIT"}
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
